@@ -352,7 +352,7 @@ do
 	;;
 
     --version | -V )
-	echo "$as_me (OpenCOBOL 1.1)"
+	echo "$as_me (OpenCOBOL CE 1.1)"
 	exit 0
 	;;
 
@@ -508,7 +508,7 @@ fi
 # List of tests.
 if $at_list_p; then
   cat <<_ATEOF
-OpenCOBOL 1.1 test suite: Data Representation test groups:
+OpenCOBOL CE 1.1 test suite: Data Representation test groups:
 
  NUM: FILENAME:LINE      TEST-GROUP-NAME
       KEYWORDS
@@ -589,15 +589,15 @@ exec 5>$at_suite_log
 
 # Banners and logs.
 cat <<\_ASBOX
-## ---------------------------------------------- ##
-## OpenCOBOL 1.1 test suite: Data Representation. ##
-## ---------------------------------------------- ##
+## ------------------------------------------------- ##
+## OpenCOBOL CE 1.1 test suite: Data Representation. ##
+## ------------------------------------------------- ##
 _ASBOX
 {
   cat <<\_ASBOX
-## ---------------------------------------------- ##
-## OpenCOBOL 1.1 test suite: Data Representation. ##
-## ---------------------------------------------- ##
+## ------------------------------------------------- ##
+## OpenCOBOL CE 1.1 test suite: Data Representation. ##
+## ------------------------------------------------- ##
 _ASBOX
   echo
 
@@ -4383,7 +4383,7 @@ _ASBOX
   echo "Please send \`$as_me.log' and all information you think might help:"
   echo
   echo "   To: <open-cobol-list@lists.sourceforge.net>"
-  echo "   Subject: [OpenCOBOL 1.1] $as_me:$at_fail_list${at_fail_list:+ failed${at_xpass_list:+,}}$at_xpass_list${at_xpass_list:+ passed unexpectedly}"
+  echo "   Subject: [OpenCOBOL CE 1.1] $as_me:$at_fail_list${at_fail_list:+ failed${at_xpass_list:+,}}$at_xpass_list${at_xpass_list:+ passed unexpectedly}"
   echo
   if test $at_debug_p = false; then
     echo
