@@ -529,7 +529,7 @@ do
 	;;
 
     --version | -V )
-	echo "$as_me (OpenCOBOL 1.1)"
+	echo "$as_me (OpenCOBOL CE 1.1)"
 	exit 0
 	;;
 
@@ -685,7 +685,7 @@ fi
 # List of tests.
 if $at_list_p; then
   cat <<_ATEOF
-OpenCOBOL 1.1 test suite: Run Tests test groups:
+OpenCOBOL CE 1.1 test suite: Run Tests test groups:
 
  NUM: FILENAME:LINE      TEST-GROUP-NAME
       KEYWORDS
@@ -766,15 +766,15 @@ exec 5>$at_suite_log
 
 # Banners and logs.
 cat <<\_ASBOX
-## ------------------------------------ ##
-## OpenCOBOL 1.1 test suite: Run Tests. ##
-## ------------------------------------ ##
+## --------------------------------------- ##
+## OpenCOBOL CE 1.1 test suite: Run Tests. ##
+## --------------------------------------- ##
 _ASBOX
 {
   cat <<\_ASBOX
-## ------------------------------------ ##
-## OpenCOBOL 1.1 test suite: Run Tests. ##
-## ------------------------------------ ##
+## --------------------------------------- ##
+## OpenCOBOL CE 1.1 test suite: Run Tests. ##
+## --------------------------------------- ##
 _ASBOX
   echo
 
@@ -19434,7 +19434,7 @@ _ASBOX
   echo "Please send \`$as_me.log' and all information you think might help:"
   echo
   echo "   To: <open-cobol-list@lists.sourceforge.net>"
-  echo "   Subject: [OpenCOBOL 1.1] $as_me:$at_fail_list${at_fail_list:+ failed${at_xpass_list:+,}}$at_xpass_list${at_xpass_list:+ passed unexpectedly}"
+  echo "   Subject: [OpenCOBOL CE 1.1] $as_me:$at_fail_list${at_fail_list:+ failed${at_xpass_list:+,}}$at_xpass_list${at_xpass_list:+ passed unexpectedly}"
   echo
   if test $at_debug_p = false; then
     echo
